--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ a {
 
 #mapid {
     height: 180px;
-    width: 420px ;
+    width: 295px ;
     border-radius: 1rem;
 }
 
@@ -263,7 +263,7 @@ a {
 .contacto-title p {
     padding: 0;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 0.5rem;
     font-family: 'Work Sans', sans-serif;
     font-size: 40px;
 }
@@ -271,7 +271,7 @@ a {
 .contacto-subtitle p {
     padding: 0;
     margin-top: 2rem;
-    margin-bottom: 0;
+    margin-bottom: 0.5rem;
     font-family: 'Work Sans', sans-serif;
     font-size: 25px;
 }
@@ -281,6 +281,22 @@ a {
     margin-bottom: 1rem;
     font-family: 'Work Sans', sans-serif;
     font-size: 25px;
+}
+
+.developers-title p {
+    padding: 0;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 18px;
+}
+
+.frase span {
+    
+    font-size: 13px;
+}
+.frase i {
+    font-size: 15px;
 }
 
 /* Fomulario */
