--- a/css/style.css
+++ b/css/style.css
@@ -106,8 +106,8 @@ body {
 }
 
 .logo {
-    width: auto;
-    height: 5rem;
+    height: 3rem;
+    margin-top: 0.4rem;
 }
 
 /* Barra buscar*/
@@ -166,26 +166,25 @@ body {
 
 /* Navbar */
 .navbar{
+    padding: 1rem 2rem;
     align-items: center;
-    justify-content: space-around;
-    min-height: 3rem;
+    justify-content: space-between;
     background: var(--blue-light);
 }
 
 .flex-nav {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 }
 
 .nav-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 2rem;
 }
 
 .nav-toggle {
-    padding-right: 20px;
     border: transparent;
     background: transparent;
     color: white;
@@ -193,30 +192,17 @@ body {
 }
 
 .nav-links {
-    height: 0;
-    overflow: hidden;
-    text-decoration: none;
-    font-family: 'Oswald', sans-serif;
-    font-size: 15px;
-    color: #f3f3f3;
-}
-
-.nav-open {
-    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 1rem;
 }
 
 .nav-link {
-    list-style: none;
-    margin: 20px 0;
-    border-bottom: 2px solid white;
-    width: 8rem;
+    font-family: 'Oswald', sans-serif;
+    padding: 0.5rem 0.1rem;
+    color: var(--white);
     font-size: 1.1rem;
-    line-height: 1.1rem;
-}
-
-.nav-link-buscar {
-    list-style: none;
-    width: 8rem;
 }
 
 .nav-link:hover {
@@ -225,24 +211,36 @@ body {
 }
 
 .buscar-nav {
-    margin: 1.25rem 0;
-    width: 97%;
-    padding-left: 35px;
+    margin: auto 0;
+    height: max-content;
+    position: relative;
+    display: flex;
+    flex-grow: 1;
 }
 
-.buscar-nav input{
-    width: 97%;
-    height: 2.5rem;
-    padding: 0 20px;
+.buscar-nav input {
+    box-sizing: border-box;
+    flex-grow: 1;
+    min-width: 0;
+    padding: 0.6rem;
+    padding-right: 3rem;
     font-size: 1rem;
-    color: var(--grey);
+    line-height: 1rem;
+    color: var(--darker-grey);
     outline: none;
     border: none;
-    transition: all 0.3s;
+    border-bottom: var(--grey) 2px solid;
+    transition: outline 0.3s;
 }
 
 .buscar-nav input:hover, .buscar-nav input:active, .buscar-nav input:focus {
     outline: var(--light-grey) 2px solid;
+}
+
+.buscar-nav-btn {
+    position: absolute;
+    height: 100%;
+    right: 0.5rem;
 }
 
 /* Estilos de letras */
@@ -441,6 +439,7 @@ label {
 
 .search-query {
     font-size: 1.3rem;
+    padding: 0.2rem 0;
 }
 
 .search-n-results {
@@ -1206,6 +1205,33 @@ button {
 }
 
 @media (min-width: 768px) {
+    .nav-toggle {
+        display: none;
+    }
+
+    .nav-header {
+        display: block;
+    }
+
+    .flex-nav {
+        flex-direction: row;
+        gap: 2rem;
+    }
+
+    .buscar-nav {
+        display: flex !important;
+    }
+
+    .nav-links {
+        display: flex !important;
+    }
+
+    .nav-link {
+        gap: 1rem;
+        padding: 1rem;
+        color: var(--white);
+    }
+
     .hero-title {
         font-family: 'Work Sans', sans-serif;
         font-size: 3rem;
@@ -1312,28 +1338,6 @@ button {
 }
 
 @media (min-width: 1024px) {
-    .nav-toggle {
-        display: none;
-    }
-
-    .nav-header {
-        display: block;
-    }
-
-    .flex-nav {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items:center;
-    }
-
-    .nav-links {
-        height: auto;
-    }
-
-    ul {
-        text-align: center;
-    }
-
     .container {
         width: 1024px;
     }
@@ -1346,32 +1350,11 @@ button {
         padding: 3rem 0;
     }
 
-    .nav-link {
-        display: inline-block;
-        border-bottom: none;
-        padding: 0.5rem 0;
-    }
-
-    .nav-link-buscar{
-        margin-right: 100px;
-        display: inline-block;
-        border-bottom: none;
-    }
-
     .nav-link:hover {
         border-radius: 1rem;
         background-color: var(--darker-blue);
         list-style-type: none;
         transition: 0.3s;
-    }
-
-    .buscar-nav {
-        margin-top: 15px;
-        width: 30%;
-    }
-
-    .buscar-nav input {
-        width: 100%;
     }
 
     .btn-filled {
