--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ body {
 
 .container-index {
     min-height: 80vh;
-    padding: 2rem;
+    padding: 2rem 1rem;
 }
 
 .container-body {
@@ -95,6 +95,7 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     justify-content: center;
+    overflow: hidden;
 }
 
 .container-index-text {
@@ -102,7 +103,7 @@ body {
 }
 
 .container-index-text * {
-    margin-bottom: 1rem;
+    padding-bottom: 1rem;
 }
 
 .logo {
@@ -256,7 +257,7 @@ body {
 
 .section-title {
     margin-bottom: 0.4rem;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: bold;
     color: var(--black);
 }
@@ -272,6 +273,26 @@ body {
     display: grid;
     gap: 0.5rem;
     grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.history-empty, .search-empty {
+    display: flex;
+    flex-direction: row;
+    gap: 0.75rem;
+    grid-column: 1 / -1;
+    min-height: 6rem;
+    font-size: 1.4rem;
+    color: var(--darker-grey);
+    border: var(--grey) 1px solid;
+    transition: all 0.3s;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.history-empty:hover, .search-empty:hover {
+    border: var(--darker-grey) 1px solid;
+    color: var(--black);
 }
 
 /* Contacto*/
@@ -504,9 +525,8 @@ input[type="checkbox"] {
 }
 
 .search-content {
-    height: max-content;
-    width: auto;
     display: grid;
+    height: max-content;
     padding: 1rem;
     gap: 0.5rem;
     grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -1214,6 +1234,10 @@ button {
         display: block;
     }
 
+    .navbar {
+        padding: 1rem 0;
+    }
+
     .flex-nav {
         flex-direction: row;
         gap: 2rem;
@@ -1340,7 +1364,7 @@ button {
 
 @media (min-width: 1024px) {
     .container {
-        width: 1024px;
+        width: 984px;
     }
 
     .container-index-text {
@@ -1395,7 +1419,7 @@ button {
 
 @media (min-width: 1280px) {
     .container {
-        min-width: 1280px;
+        min-width: 1240px;
     }
 
     .search-content {
@@ -1409,7 +1433,7 @@ button {
 
 @media (min-width: 1536px) {
     .container {
-        min-width: 1536px;
+        min-width: 1496px;
     }
 
     .search-content {
@@ -1427,7 +1451,7 @@ button {
 
 @media (min-width: 2000px) {
     .container {
-        min-width: 2000px;
+        min-width: 1960px;
     }
 
     .search-content {
