Correción de padding en la vista de búsqueda

--- a/css/style.css
+++ b/css/style.css
@@ -1303,7 +1303,7 @@ button {
     }
 
     .container-search {
-        padding: 3rem;
+        padding: 3rem 0;
     }
 
     .card-recipe-summary {
