--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,13 @@ body {
 .flex-nav {
     display: flex;
     flex-direction: column;
+}
+
+.nav-content {
+    margin-top: 1rem;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
     gap: 1rem;
 }
 
@@ -275,7 +282,7 @@ body {
     grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.history-empty, .search-empty {
+.empty {
     display: flex;
     flex-direction: row;
     gap: 0.75rem;
@@ -290,7 +297,7 @@ body {
     justify-content: center;
 }
 
-.history-empty:hover, .search-empty:hover {
+.empty:hover {
     border: var(--darker-grey) 1px solid;
     color: var(--black);
 }
@@ -558,6 +565,8 @@ input[type="checkbox"] {
 }
 
 .card-recipe-time {
+    display: flex;
+    align-items: center;
     top: 0.5rem;
     right: 0.5rem;
     text-align: right;
@@ -1003,6 +1012,7 @@ input[type="checkbox"] {
     display: flex;
     flex-direction: column;
     gap: 0.25rem;
+    margin-top: 0.5rem;
 }
 
 .cart-product {
@@ -1238,17 +1248,18 @@ button {
         padding: 1rem 0;
     }
 
-    .flex-nav {
+    .nav-content {
+        display: flex !important;
+        margin-top: 0;
+        flex-grow: 1;
+        display: flex;
         flex-direction: row;
         gap: 2rem;
     }
 
-    .buscar-nav {
-        display: flex !important;
-    }
-
-    .nav-links {
-        display: flex !important;
+    .flex-nav {
+        flex-direction: row;
+        gap: 2rem;
     }
 
     .nav-link {
@@ -1303,7 +1314,7 @@ button {
     }
 
     .container-search {
-        padding: 3rem;
+        padding: 3rem 0;
     }
 
     .card-recipe-summary {
