--- a/css/style.css
+++ b/css/style.css
@@ -1244,6 +1244,23 @@ button {
     display: none;
 }
 
+.alert {
+    display: none;
+    position: fixed;
+    bottom: 1rem;
+    left: 10%;
+    right: 10%;
+    width: 80%;
+    padding: 1rem 2rem;
+    background-color: var(--blue-light);
+    font-size: 1rem;
+    font-weight: bold;
+    color: var(--white);
+    border-radius: 0.2rem;
+    border-left: var(--darker-blue) 8px solid;
+    box-shadow: 2px 2px 2px 2px rgba(2, 97, 160, 0.1);
+}
+
 @media (min-width: 512px) {
     .container-index-text * {
         width: 60%;
@@ -1406,6 +1423,12 @@ button {
     .cart-product-delete {
         top: 0.35rem;
         right: 0.35rem;
+    }
+
+    .alert {
+        left: 25%;
+        right: 25%;
+        width: 50%;
     }
 }
 
