Diseño de la alerta

--- a/css/style.css
+++ b/css/style.css
@@ -1254,7 +1254,7 @@ button {
     padding: 1rem 2rem;
     background-color: var(--blue-light);
     font-size: 1rem;
-    font-weight: normal;
+    font-weight: bold;
     color: var(--white);
     border-radius: 0.2rem;
     border-left: var(--darker-blue) 8px solid;
