--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,11 @@ body {
     font-size: 1rem;
     font-weight: bold;
     color: var(--main);
+    transition: color 0.3s;
+}
+
+.btn-empty:hover {
+    color: var(--main-darker);
 }
 
 .btn-empty-cart {
@@ -404,7 +409,7 @@ body {
     color:var(--blue-light);
 }
 
-.contact-wrapper{
+.contact-wrapper {
     box-shadow: 0 0 20px 0 rgba( 155, 155, 155, .3) ;
     margin-top: 2em;
 }
@@ -414,48 +419,53 @@ body {
 }
 
 .contact-form {
-    background: var(--white) ;
+    background: var(--white);
 }
 
-.contact-form form { 
+.contact-form form {
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
 }
 
 .contact-form form .block {
+    min-width: 0;
     grid-column: 1 / 3;
 }
 
-.contact-form form p{ 
+.contact-form form p {
     margin: 0;
-    padding: 1em;
-    
 }
 
-.contact-form form a{ 
+.contact-form form a {
     margin: 0;
     padding: 1em;
 }
 
-#btn-cancelar{
+#btn-cancelar {
     margin-top: 1em;
 }
 
-#button-send{
+#button-send {
     margin-top: 1em;
 }
 
-.contact-form form button{
+.contact-form form button {
     width: 100%;
-} 
+}
 
-.contact-form form input {
+.contact-form form input, .contact-form form textarea {
+    box-sizing: border-box;
+    min-width: 0;
+    font-family: inherit;
     width: 100%;
     padding: .7em;
     border: none;
     background: none;
     border-bottom: 1px solid var(--blue-light);
     outline: none;
+    outline: 0;
 }
 
 .contact-info ul {
@@ -537,9 +547,9 @@ body {
 }
 
 .btn-filled {
-    border-radius: 1rem;
-    width: 90%;
-    margin: 0.3rem 0;
+    border-radius: 0.2rem;
+    width: 80%;
+    margin: 0;
     padding: 1rem 0.5rem;
     color: var(--white);
     background-color: var(--main);
@@ -988,13 +998,14 @@ input[type="checkbox"] {
 }
 
 .recipe-ingredient {
+    height: auto;
     display: flex;
     flex-direction: row;
     background-color: var(--white);
 }
 
 .recipe-ingredient-quantity {
-    width: 7rem;
+    width: 6rem;
     padding: 0.5rem;
     display: flex;
     flex-direction: column;
@@ -1030,6 +1041,8 @@ input[type="checkbox"] {
 }
 
 .recipe-ingredient-text {
+    width: 100%;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1037,9 +1050,9 @@ input[type="checkbox"] {
 }
 
 .recipe-ingredient-label {
+    width: min-content;
     padding: 0 0.3rem;
     margin-bottom: 0.1rem;
-    width: max-content;
     background-color: var(--darker-blue);
     color: var(--white);
     font-size: 0.8rem;
@@ -1047,8 +1060,6 @@ input[type="checkbox"] {
 }
 
 .recipe-ingredient-title {
-    display: flex;
-    text-align: left;
     font-size: 1.1rem;
     font-weight: bold;
     line-height: 1.3rem;
@@ -1069,6 +1080,7 @@ input[type="checkbox"] {
 }
 
 .recipe-nutrition p {
+    word-break: break-all;
     font-size: 0.9rem;
 }
 
@@ -1336,6 +1348,16 @@ button {
     color: var(--white);
     border-radius: 0.2rem;
     border-left: var(--darker-blue) 8px solid;
+}
+
+@media (min-width: 320px) {
+    .recipe-ingredient-label {
+        width: max-content;
+    }
+
+    .recipe-nutrition p {
+        word-break: normal;
+    }
 }
 
 @media (min-width: 512px) {
